add favourites doc
